--- a/shelter/shared/styles/_popup.scss
+++ b/shelter/shared/styles/_popup.scss
@@ -134,6 +134,10 @@
         letter-spacing: 0.06em;
       }
 
+      &__text {
+        text-align: justify;
+      }
+
       &__list {
         margin-top: 24px;
       }
